--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <section>
 <div class="hero">
     <div class="side_containers">
-        <h1>Vikash Maths Academy</h1>
+        <h1>Vikash Verma (VV)</h1>
         <p>
             Hi, Everyone I am vikash verma from <br> <span class="channel">vikash maths academy.</span>
         </p><br>
