--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <li><a href="mywork.html">My Works</a></li>
             <li><a href="#">About</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <li><a href="#">Doubt Section</a></li>
+            <li><a href="Doubt-section.html">Doubt Section</a></li>
         </ul>
     </div>
     <i class="fa-solid fa-bars" onclick="showMenu()"></i>
