--- a/contact.html
+++ b/contact.html
@@ -46,8 +46,8 @@
             "Study is the key that unlocks the door to knowledge, and the journey of learning is the path to endless possibilities."
         </p>
         <h3>Follow Me:-</h3>
-        <a href="#"><p><i class="fa-brands fa-youtube"></i>Youtube</p></a>
-        <a href="#"><p><i class="fa-brands fa-instagram"></i>Instagram</p></a>
+        <a href="https://youtube.com/@VIKASHMATHSACADEMY?si=F4hN7L2eiKB24w1c"><p><i class="fa-brands fa-youtube"></i>Youtube</p></a>
+        <a href="https://instagram.com/vikashmathsacademy?igshid=MTk0NTkyODZkYg=="><p><i class="fa-brands fa-instagram"></i>Instagram</p></a>
         <a href="#"><p><i class="fa-brands fa-facebook"></i></p>Facebook</a>
         <a href="#"><p><i class="fa-brands fa-telegram"></i></p>Telegram</a>
         <p>Thank You For Visiting :) Visit Again</p>
@@ -61,9 +61,9 @@
 <footer>
 <p>Created With ❤️ By Vikash Maths Academy</p>
 <p>Follow On:-</p>
-<a href="#"><i class="fa-brands fa-youtube social-icons"></i></a>
+<a href="https://youtube.com/@VIKASHMATHSACADEMY?si=F4hN7L2eiKB24w1c"><i class="fa-brands fa-youtube social-icons"></i></a>
 <a href="#"><i class="fa-brands fa-facebook social-icons"></i></a>
-<a href="#"><i class="fa-brands fa-instagram social-icons"></i></a>
+<a href="https://instagram.com/vikashmathsacademy?igshid=MTk0NTkyODZkYg=="><i class="fa-brands fa-instagram social-icons"></i></a>
 <a href="#"><i class="fa-brands fa-telegram social-icons"></i></a>
 </footer>
 
