--- a/Doubt-section.html
+++ b/Doubt-section.html
@@ -61,6 +61,11 @@
             </div>
 
             <div class="input_box">
+                <input type="number" autocomplete="off" required name="Email Id">
+                <label>Phone Num. (Optional)</label>
+            </div>
+
+            <div class="input_box">
                 <textarea name="Doubt/Question" id="doubt-area" placeholder="Enter Your Question"></textarea>
             </div>
 
@@ -74,9 +79,9 @@
 <footer>
 <p>Created With ❤️ By Vikash Maths Academy</p>
 <p>Follow On:-</p>
-<a href="#"><i class="fa-brands fa-youtube social-icons"></i></a>
+<a href="https://youtube.com/@VIKASHMATHSACADEMY?si=F4hN7L2eiKB24w1c"><i class="fa-brands fa-youtube social-icons"></i></a>
 <a href="#"><i class="fa-brands fa-facebook social-icons"></i></a>
-<a href="#"><i class="fa-brands fa-instagram social-icons"></i></a>
+<a href="https://instagram.com/vikashmathsacademy?igshid=MTk0NTkyODZkYg=="><i class="fa-brands fa-instagram social-icons"></i></a>
 <a href="#"><i class="fa-brands fa-telegram social-icons"></i></a>
 </footer>
 
