--- a/mywork.html
+++ b/mywork.html
@@ -100,7 +100,7 @@
 <p>Created With ❤️ By Vikash Maths Academy</p>
 <p>Follow On:-</p>
 <a href="https://youtube.com/@VIKASHMATHSACADEMY?si=F4hN7L2eiKB24w1c"><i class="fa-brands fa-youtube social-icons"></i></a>
-<a href="#"><i class="fa-brands fa-facebook social-icons"></i></a>
+<a href="https://www.facebook.com/profile.php?id=100057956400553&mibextid=ZbWKwL"><i class="fa-brands fa-facebook social-icons"></i></a>
 <a href="https://instagram.com/vikashmathsacademy?igshid=MTk0NTkyODZkYg=="><i class="fa-brands fa-instagram social-icons"></i></a>
 <a href="#"><i class="fa-brands fa-telegram social-icons"></i></a>
 </footer>
