--- a/Doubt-section.html
+++ b/Doubt-section.html
@@ -24,7 +24,7 @@
         <ul>
             <li class="active"><a href="index.html">Home</a></li>
             <li><a href="mywork.html">My Works</a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="getmore.html">Get More</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li><a href="Doubt-section.html">Doubt Section</a></li>
         </ul>
@@ -62,7 +62,7 @@
 
             <div class="input_box">
                 <input type="number" autocomplete="off" required name="Email Id">
-                <label>Phone Num. (Optional)</label>
+                <label>Phone Number</label>
             </div>
 
             <div class="input_box">
