--- a/getmore.html
+++ b/getmore.html
@@ -34,13 +34,52 @@
 
 <!-- ------------------------------About Page------------------------ -->
 
-<div class="about-page">
-    <div class="page">
-        <h1>Coming Soon.......</h1>
-        <p>Stay Tuned......</p>
-        <a href="index.html">Explore</a>
-    </div>
+<!-- --------------------------Trigonometric Calculator--------------------------- -->
+
+<div class="text_msg">
+    <p>1. Trigonometric Calculator</p>
 </div>
+<div class="calculator">
+    <label for="angle">Enter Angle in Degrees:</label>
+    <input type="number" id="angle" placeholder="Enter angle">
+
+    <button onclick="calculateTrigRatios()">Calculate Ratios</button>
+
+    <div id="result"></div>
+</div>
+<br><br>
+
+
+<!-- temperature-converter--- -->
+
+<div class="text_msg">
+    <p>2. Temperature Converter</p>
+</div>
+<div class="temperature-converter">
+    <label for="celsiusInput">Enter Temperature in Celsius:</label>
+    <input type="number" id="celsiusInput" placeholder="Enter Temperature">
+
+    <button onclick="convertTemperature()">Convert to Fahrenheit</button>
+
+    <div id="results"></div>
+</div>
+<br><br>
+
+<!-- ---------------------------------Factor calculator-------------------------- -->
+
+<div class="text_msg">
+    <p>3. Factor Calculator</p>
+</div>
+<div class="factor-calc">
+<label for="number">Enter a number:</label>
+<input type="number" id="number" min="1" required placeholder="Enter Number">
+<button onclick="findFactors()">Find Factors</button>
+<div id="resultss"></div>
+</div>
+
+
+
+
 
 <!-- --------------------------Footer------------------------- -->
 
